stage 3 after teacher test